# rginx

./: .dockerignore  .env.example  .gitignore  .pr_agent.toml  ACME_SUPPORT_PLAN.md  ADMIN_SURFACE_REMOVAL_PLAN.md  ARCHITECTURE_CONTROL_PLANE_IMPLEMENTATION_PLAN.md  ARCHITECTURE_EDGE_TRANSPORT_STREAMING_PLAN.md  ARCHITECTURE_HTTP3_PHASE0_FREEZE.md  ARCHITECTURE_HTTP3_PLAN.md  ARCHITECTURE_REMEDIATION_PLAN.md  ARCHITECTURE_REMEDIATION_RELEASE_NOTE.md  CACHE_SUPPORT_PLAN.md  CHANGELOG.md  CONTROL_PLANE_API_CONVENTIONS.md  CONTROL_PLANE_BACKUP_AND_RECOVERY.md  CONTROL_PLANE_DRAGONFLY_KEYSPACE.md  CONTROL_PLANE_ENVIRONMENT_VARIABLES.md  Cargo.toml  Dockerfile  EDGE_CONTROL_PLANE_PLAN.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  MULTI_LISTENER_MODEL_PLAN.md  README.md  RELEASE_NOTES_v0.1.3-rc.11.md  RELEASE_NOTES_v0.1.3-rc.13.md  ROADMAP.md  clippy.toml  compose.yaml  deny.toml
crates/rginx-app/: Cargo.toml
crates/rginx-app/src/: admin_cli.rs  check.rs  cli.rs  main.rs  migrate_nginx.rs  pid_file.rs  runtime.rs  signal.rs
crates/rginx-app/src/admin_cli/: cache.rs  counters.rs  mod.rs  peers.rs  render.rs  snapshot.rs  socket.rs  status.rs  traffic.rs  upstreams.rs
crates/rginx-app/src/check/: acme.rs  render.rs  routes.rs  summary.rs  tls.rs
crates/rginx-app/src/cli/: tests.rs
crates/rginx-app/src/migrate_nginx/: convert.rs  mod.rs  parser.rs  render.rs  tests.rs  tokenize.rs
crates/rginx-app/tests/: access_log.rs  active_health.rs  admin.rs  backup.rs  check.rs  compression.rs  dns_refresh.rs  downstream_mtls.rs  dynamic_config_api.rs  failover.rs  grpc_http3.rs  grpc_proxy.rs  hardening.rs  http2.rs  http3.rs  ip_hash.rs  least_conn.rs  migrate.rs  multi_listener.rs  nginx_alignment.rs  ocsp.rs  phase1.rs  policy.rs  proxy_protocol.rs  reload.rs  streaming_download.rs  tls_policy.rs  upgrade.rs  upstream_http2.rs  upstream_http3.rs  upstream_mtls.rs  upstream_server_name.rs  vhost.rs  weighted_round_robin.rs  workers.rs
crates/rginx-app/tests/admin/: commands.rs  delta_wait.rs  snapshot.rs
crates/rginx-app/tests/check/: acme.rs  basic.rs  helpers.rs  includes.rs  summary.rs  tls.rs
crates/rginx-app/tests/downstream_mtls/: enforcement.rs  observability.rs  validation.rs
crates/rginx-app/tests/grpc_http3/: config.rs  health.rs  helpers.rs  proxy.rs  timeout.rs
crates/rginx-app/tests/grpc_proxy/: basic.rs  lifecycle.rs  timeout.rs
crates/rginx-app/tests/hardening/: connection.rs  limits.rs
crates/rginx-app/tests/http3/: basic.rs  early_data.rs  mtls.rs  policy.rs  retry.rs
crates/rginx-app/tests/ocsp/: cache.rs  helpers.rs  refresh.rs
crates/rginx-app/tests/reload/: cache.rs  cli.rs  reload_boundary.rs  reload_flow.rs  restart_flow.rs  streaming_flow.rs
crates/rginx-app/tests/support/: fs_paths.rs  harness.rs  http.rs  mod.rs  response.rs  tls.rs
crates/rginx-app/tests/upgrade/: max_connections.rs  proxy_flow.rs  reload_flow.rs
crates/rginx-config/: Cargo.toml
crates/rginx-config/src/: compile.rs  lib.rs  listen.rs  load.rs  model.rs  validate.rs
crates/rginx-control-api/: Cargo.toml
crates/rginx-control-api/src/: app.rs  auth.rs  config.rs  error.rs  main.rs  request_context.rs  state.rs
crates/rginx-control-console/: Cargo.toml
crates/rginx-control-console/e2e/: package-lock.json  package.json  playwright.config.mjs
crates/rginx-control-console/src/: api.rs  display.rs  lib.rs  pages.rs  runtime.rs
crates/rginx-control-console/static/: console.css  index.html
crates/rginx-control-service/: Cargo.toml
crates/rginx-control-service/src/: alerts.rs  audit.rs  auth.rs  config.rs  dashboard.rs  deployments.rs  dns.rs  dns_deployments.rs  error.rs  health.rs  lib.rs  meta.rs  metrics.rs  nodes.rs  revisions.rs  worker.rs
crates/rginx-control-store/: Cargo.toml
crates/rginx-control-store/src/: bootstrap.rs  config.rs  deployments.rs  dns.rs  dns_deployments.rs  dragonfly.rs  lib.rs  repositories.rs
crates/rginx-control-types/: Cargo.toml
crates/rginx-control-types/src/: alerts.rs  audit.rs  auth.rs  dashboard.rs  deployments.rs  dns.rs  events.rs  lib.rs  meta.rs  nodes.rs  revisions.rs
crates/rginx-control-worker/: Cargo.toml
crates/rginx-control-worker/src/: config.rs  main.rs  worker.rs
crates/rginx-core/: Cargo.toml
crates/rginx-core/src/: config.rs  context.rs  error.rs  lib.rs  service.rs  types.rs
crates/rginx-dns/: Cargo.toml
crates/rginx-dns/src/: lib.rs
crates/rginx-http/: Cargo.toml
crates/rginx-http/src/: client_ip.rs  compression.rs  file.rs  handler.rs  lib.rs  metrics.rs  proxy.rs  rate_limit.rs  request_target.rs  router.rs  server.rs  state.rs  timeout.rs  tls.rs  transition.rs
crates/rginx-node-agent/: Cargo.toml
crates/rginx-node-agent/src/: agent.rs  config.rs  main.rs
crates/rginx-observability/: Cargo.toml
crates/rginx-observability/src/: logging.rs
crates/rginx-runtime/: Cargo.toml
crates/rginx-runtime/src/: admin.rs  bootstrap.rs  cache.rs  health.rs  lib.rs  ocsp.rs  reload.rs  restart.rs  shutdown.rs  state.rs
crates/rginx-web/: Cargo.toml
crates/rginx-web/src/: auth.rs  config.rs  dns_runtime.rs  main.rs  middleware.rs  state.rs  worker.rs
fuzz/: Cargo.toml  README.md  rust-toolchain.toml
fuzz/corpus/certificate_inspect/: invalid_pem.seed  self_signed_pem.seed
fuzz/corpus/config_preprocess/: env_defaults.seed  include_glob.seed  minimal_return.seed
fuzz/corpus/ocsp_responder_discovery/: aia_pem.seed  no_pem_items.seed
fuzz/corpus/ocsp_response/: basic_response_empty_octet.seed  unsupported_response_type.seed
fuzz/corpus/proxy_protocol/: invalid_prefix.seed  trusted_tcp4.seed  unknown.seed  untrusted_tcp6.seed
fuzz/dictionaries/: certificate_inspect.dict  config_preprocess.dict  ocsp_responder_discovery.dict  ocsp_response.dict  proxy_protocol.dict
fuzz/fuzz_targets/: certificate_inspect.rs  common.rs  config_preprocess.rs  ocsp_responder_discovery.rs  ocsp_response.rs  proxy_protocol.rs
fuzz/options/: certificate_inspect.options  config_preprocess.options  ocsp_responder_discovery.options  ocsp_response.options  proxy_protocol.options
(+730 files in other folders)
