[workspace]
members = ["crates/*"]
default-members = ["crates/rginx-app"]
resolver = "2"

[workspace.package]
version = "0.1.3-rc.10"
edition = "2024"
authors = ["vansour"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/vansour/rginx"
homepage = "https://github.com/vansour/rginx"
documentation = "https://github.com/vansour/rginx/tree/main/wiki"
readme = "README.md"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
brotli = "8.0"
bytes = "1.11"
chrono = "0.4"
clap = { version = "4.6", features = ["derive"] }
futures-util = "0.3"
flate2 = "1.1"
http = "1.4"
http-body-util = "0.1"
h3 = "0.0.8"
h3-quinn = "0.0.10"
hyper = { version = "1.9", features = ["client", "http1", "http2", "server"] }
hyper-rustls = { version = "0.27.7", default-features = false, features = ["aws-lc-rs", "http1", "http2", "native-tokio", "tls12"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
ipnet = "2.12"
percent-encoding = "2.3"
pin-project-lite = "0.2"
quinn = { version = "0.11.9", default-features = false, features = ["runtime-tokio", "rustls-aws-lc-rs"] }
ron = "0.12"
rustls = "0.23.37"
rustls-native-certs = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.11"
sha2 = "0.11"
thiserror = "2.0"
tokio = { version = "1.51", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-rustls = "0.26"
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
webpki = { package = "rustls-webpki", version = "0.103.11", default-features = false, features = ["std", "aws-lc-rs"] }
