[workspace]
members = [
    "crates/rginx-app",
    "crates/rginx-config",
    "crates/rginx-control-console",
    "crates/rginx-control-service",
    "crates/rginx-control-store",
    "crates/rginx-control-types",
    "crates/rginx-core",
    "crates/rginx-dns",
    "crates/rginx-http",
    "crates/rginx-node-agent",
    "crates/rginx-observability",
    "crates/rginx-runtime",
    "crates/rginx-web",
]
default-members = ["crates/rginx-app"]
resolver = "2"

[workspace.package]
version = "0.1.3-rc.13"
edition = "2024"
authors = ["vansour"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/vansour/rginx"
homepage = "https://github.com/vansour/rginx"
documentation = "https://github.com/vansour/rginx#readme"
readme = "README.md"
rust-version = "1.94.1"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
base64 = "0.22"
brotli = "8.0"
bytes = "1.11"
chrono = "0.4"
clap = { version = "4.6", features = ["derive"] }
ctor = "0.2"
futures-util = "0.3"
flate2 = "1.1"
http = "1.4"
http-body-util = "0.1"
h3 = "0.0.8"
h3-quinn = "0.0.10"
hickory-resolver = "0.24.4"
hyper = { version = "1.9", features = ["client", "http1", "http2", "server"] }
hyper-rustls = { version = "0.27.7", default-features = false, features = ["aws-lc-rs", "http1", "http2", "native-tokio", "tls12"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
ipnet = "2.12"
percent-encoding = "2.3"
pin-project-lite = "0.2"
proptest = "1"
quinn = { version = "0.11.9", default-features = false, features = ["runtime-tokio", "rustls-aws-lc-rs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ron = "0.12"
ring = "0.17"
rustls = "0.23.37"
rustls-native-certs = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.11"
sha2 = "0.11"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono"] }
thiserror = "2.0"
tokio = { version = "1.51", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-rustls = "0.26"
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["fs"] }
tower-service = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
webpki = { package = "rustls-webpki", version = "0.103.11", default-features = false, features = ["std", "aws-lc-rs"] }
serde-wasm-bindgen = "0.6"
