[workspace]
members = [
    "crates/rginx-app",
    "crates/rginx-config",
    "crates/rginx-core",
    "crates/rginx-http",
    "crates/rginx-observability",
    "crates/rginx-runtime",
]
default-members = ["crates/rginx-app"]
resolver = "2"

[workspace.package]
version = "0.1.4-rc.2"
edition = "2024"
authors = ["vansour"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/vansour/rginx"
homepage = "https://github.com/vansour/rginx"
documentation = "https://github.com/vansour/rginx#readme"
readme = "README.md"
rust-version = "1.94.1"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
brotli = "8.0"
bytes = "1.11"
chrono = "0.4"
clap = { version = "4.6", features = ["derive"] }
ctor = "0.10"
futures-util = "0.3"
flate2 = "1.1"
http = "1.4"
http-body-util = "0.1"
httpdate = "1.0"
h3 = "0.0.8"
h3-quinn = "0.0.10"
hickory-resolver = "0.26.0"
hyper = { version = "1.9", features = ["client", "http1", "http2", "server"] }
hyper-rustls = { version = "0.27.9", default-features = false, features = ["aws-lc-rs", "http1", "http2", "native-tokio", "tls12"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
instant-acme = { version = "0.8.5", default-features = false, features = ["aws-lc-rs", "hyper-rustls", "rcgen"] }
ipnet = "2.12"
pin-project-lite = "0.2"
proptest = "1"
quinn = { version = "0.11.9", default-features = false, features = ["runtime-tokio", "rustls-aws-lc-rs"] }
ron = "0.12"
regex = "1.12"
rustls = "0.23.39"
rustls-native-certs = "0.8.3"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.11"
sha2 = "0.11"
thiserror = "2.0"
tokio = { version = "1.52", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-rustls = "0.26"
tower-service = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.23", features = ["v7", "std"] }
webpki = { package = "rustls-webpki", version = "0.103.13", default-features = false, features = ["std", "aws-lc-rs"] }
