[package]
name = "rginx-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rcgen = "0.14"
rginx-config = { path = "../crates/rginx-config" }
rginx-http = { path = "../crates/rginx-http" }

[workspace]
members = ["."]

[[bin]]
name = "proxy_protocol"
path = "fuzz_targets/proxy_protocol.rs"
test = false
doc = false
bench = false

[[bin]]
name = "config_preprocess"
path = "fuzz_targets/config_preprocess.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ocsp_response"
path = "fuzz_targets/ocsp_response.rs"
test = false
doc = false
bench = false

[[bin]]
name = "certificate_inspect"
path = "fuzz_targets/certificate_inspect.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ocsp_responder_discovery"
path = "fuzz_targets/ocsp_responder_discovery.rs"
test = false
doc = false
bench = false
