[package]
name = "rginx"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Rust edge reverse proxy for small and medium deployments."
keywords = ["reverse-proxy", "edge-proxy", "http", "tls", "rust"]
categories = ["network-programming", "web-programming::http-server"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
rginx-config = { path = "../rginx-config" }
rginx-http = { path = "../rginx-http" }
rginx-observability = { path = "../rginx-observability" }
rginx-runtime = { path = "../rginx-runtime" }
tokio.workspace = true

[dev-dependencies]
bytes.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-rustls.workspace = true
hyper-util.workspace = true
libc = "0.2"
rustls.workspace = true
rustls-pemfile.workspace = true
tokio-rustls.workspace = true
