[package]
name = "rginx"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Rust edge reverse proxy for small and medium deployments."
keywords = ["reverse-proxy", "edge-proxy", "http", "tls", "rust"]
categories = ["network-programming", "web-programming::http-server"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
http.workspace = true
libc = "0.2"
rginx-config = { path = "../rginx-config" }
rginx-http = { path = "../rginx-http" }
rginx-observability = { path = "../rginx-observability" }
rginx-runtime = { path = "../rginx-runtime" }
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
base64.workspace = true
brotli.workspace = true
bytes.workspace = true
flate2.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-rustls.workspace = true
hyper-util.workspace = true
libc = "0.2"
rustls.workspace = true
rustls-pemfile.workspace = true
serde_json.workspace = true
tokio-rustls.workspace = true
