[package]
name = "rginx"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Rust edge reverse proxy for small and medium deployments."
keywords = ["reverse-proxy", "edge-proxy", "http", "tls", "rust"]
categories = ["network-programming", "web-programming::http-server"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
libc = "0.2"
rginx-config = { path = "../rginx-config" }
rginx-core = { path = "../rginx-core" }
rginx-http = { path = "../rginx-http" }
rginx-observability = { path = "../rginx-observability" }
rginx-runtime = { path = "../rginx-runtime" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
base64.workspace = true
brotli.workspace = true
bytes.workspace = true
chrono.workspace = true
ctor.workspace = true
flate2.workspace = true
h3.workspace = true
h3-quinn.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-rustls.workspace = true
hyper-util.workspace = true
libc = "0.2"
quinn.workspace = true
rustls.workspace = true
rcgen = "0.14"
rasn = "0.28.11"
rasn-ocsp = "0.28.11"
rasn-pkix = "0.28.11"
serde_json.workspace = true
sha1.workspace = true
tokio-rustls.workspace = true
