[package]
name = "rginx-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Configuration loading, validation, and compilation for Rginx."

[dependencies]
http.workspace = true
ipnet.workspace = true
ron.workspace = true
rginx-core = { path = "../rginx-core" }
rustls.workspace = true
serde.workspace = true
