[package]
name = "rginx-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Configuration loading, validation, and compilation for rginx."

[dependencies]
http.workspace = true
ipnet.workspace = true
regex.workspace = true
ron.workspace = true
rginx-core = { path = "../rginx-core" }
rustls.workspace = true
serde.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile = "3.27"
