[package]
name = "rginx-control-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Domain services for the rginx control plane."

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
rginx-config = { path = "../rginx-config" }
rginx-control-store = { path = "../rginx-control-store" }
rginx-control-types = { path = "../rginx-control-types" }
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
