[package]
name = "rginx-control-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Data access and repository layer for the rginx control plane."

[dependencies]
anyhow.workspace = true
chrono.workspace = true
rginx-control-types = { path = "../rginx-control-types" }
serde_json.workspace = true
sqlx.workspace = true
