[package]
name = "rginx-control-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Shared API and domain types for the rginx control plane."

[dependencies]
serde.workspace = true
serde_json.workspace = true
