[package]
name = "rginx-control-worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Background worker for control-plane deployment orchestration."

[dependencies]
anyhow.workspace = true
rginx-control-service = { path = "../rginx-control-service" }
rginx-control-store = { path = "../rginx-control-store" }
rginx-observability = { path = "../rginx-observability" }
tokio.workspace = true
tracing.workspace = true
