[package]
name = "rginx-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Core types and shared runtime models for Rginx."

[dependencies]
http.workspace = true
ipnet.workspace = true
thiserror.workspace = true
