[package]
name = "rginx-dns"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Authoritative DNS runtime primitives for rginx."

[dependencies]
anyhow.workspace = true
hickory-proto = "0.24.4"
ipnet.workspace = true
rginx-control-types = { path = "../rginx-control-types" }
tokio.workspace = true
tracing.workspace = true
