[package]
name = "rginx-http"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "HTTP server, routing, and proxying for rginx."

[dependencies]
base64.workspace = true
brotli.workspace = true
bytes.workspace = true
der = { version = "0.7.8", features = ["alloc", "derive", "oid", "std"] }
flate2.workspace = true
futures-util.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-rustls.workspace = true
hyper-util.workspace = true
pin-project-lite.workspace = true
rginx-config = { path = "../rginx-config" }
rginx-core = { path = "../rginx-core" }
rustls.workspace = true
rustls-native-certs.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
sha1.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }
tokio-rustls.workspace = true
tracing.workspace = true
x509-ocsp = { version = "0.2.1", features = ["std"] }
x509-parser.workspace = true

[dev-dependencies]
rcgen = "0.13"
spki = { version = "0.7.3", features = ["alloc"] }
