[package]
name = "rginx-http"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "HTTP server, routing, and proxying for rginx."

[dependencies]
base64.workspace = true
brotli.workspace = true
bytes.workspace = true
chrono.workspace = true
flate2.workspace = true
futures-util.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-rustls.workspace = true
hyper-util.workspace = true
pin-project-lite.workspace = true
num-bigint = "0.4"
rasn = "0.28.11"
rasn-ocsp = "0.28.11"
rasn-pkix = "0.28.11"
rginx-config = { path = "../rginx-config" }
rginx-core = { path = "../rginx-core" }
rustls.workspace = true
rustls-native-certs.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
sha1.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }
tokio-rustls.workspace = true
tracing.workspace = true
x509-parser.workspace = true

[dev-dependencies]
rcgen = { version = "0.14", features = ["x509-parser"] }
tempfile = "3.27"
