[package]
name = "rginx-http"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "HTTP server, routing, and proxying for rginx."

[dependencies]
aws-lc-rs = "1.16.2"
base64.workspace = true
brotli.workspace = true
bytes.workspace = true
chrono.workspace = true
flate2.workspace = true
futures-util.workspace = true
http.workspace = true
http-body-util.workspace = true
httpdate.workspace = true
h3.workspace = true
h3-quinn.workspace = true
hickory-resolver.workspace = true
hyper.workspace = true
hyper-rustls.workspace = true
hyper-util.workspace = true
pin-project-lite.workspace = true
quinn.workspace = true
quinn-proto = { version = "0.11.14", default-features = false }
rasn = "0.28.11"
rasn-ocsp = "0.28.11"
rasn-pkix = "0.28.11"
rginx-core = { path = "../rginx-core" }
rustls.workspace = true
rustls-native-certs.workspace = true
serde.workspace = true
sha1.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }
tokio-rustls.workspace = true
tower-service.workspace = true
tracing.workspace = true
uuid.workspace = true
webpki.workspace = true

[dev-dependencies]
ctor.workspace = true
proptest.workspace = true
rcgen = "0.14"
tempfile = "3.27"
