[package]
name = "rginx-node-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Node-local agent that bridges the rginx admin socket with the control plane."

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
rginx-control-types = { path = "../rginx-control-types" }
rginx-observability = { path = "../rginx-observability" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
