[package]
name = "rginx-observability"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Tracing and logging initialization for rginx."

[dependencies]
tracing-subscriber.workspace = true
