[package]
name = "rginx-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Runtime orchestration, reload, shutdown, and health checks for Rginx."

[dependencies]
rginx-config = { path = "../rginx-config" }
rginx-core = { path = "../rginx-core" }
rginx-http = { path = "../rginx-http" }
tokio.workspace = true
tracing.workspace = true
