[package]
name = "rginx-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Runtime orchestration, reload, shutdown, and health checks for rginx."

[dependencies]
rginx-config = { path = "../rginx-config" }
rginx-core = { path = "../rginx-core" }
rginx-http = { path = "../rginx-http" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-util"] }
tracing.workspace = true
