[package]
name = "rginx-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Runtime orchestration, reload, shutdown, and health checks for rginx."

[dependencies]
bytes.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-rustls.workspace = true
hyper-util.workspace = true
instant-acme.workspace = true
libc = "0.2"
quinn.workspace = true
rginx-config = { path = "../rginx-config" }
rginx-core = { path = "../rginx-core" }
rginx-http = { path = "../rginx-http" }
rustls.workspace = true
rustls-native-certs.workspace = true
serde.workspace = true
serde_json.workspace = true
socket2 = "0.6.3"
tokio = { workspace = true, features = ["io-util", "process"] }
tracing.workspace = true

[dev-dependencies]
ctor.workspace = true
tempfile = "3.27"
