[package]
name = "rginx-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Unified control-plane web process for rginx, including API, console, and background worker."

[dependencies]
anyhow.workspace = true
axum.workspace = true
futures-util.workspace = true
ipnet.workspace = true
rginx-dns = { path = "../rginx-dns" }
rginx-config = { path = "../rginx-config" }
rginx-control-service = { path = "../rginx-control-service" }
rginx-control-store = { path = "../rginx-control-store" }
rginx-control-types = { path = "../rginx-control-types" }
rginx-observability = { path = "../rginx-observability" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
